bug: Updated z-index for circles.

--- a/css/presentation.css
+++ b/css/presentation.css
@@ -89,6 +89,7 @@ ul#little-circles {
 	left: 0;
 	width: 100%;
 	height: 100%;
+	z-index: 100;
 	position: absolute;
 }
 
@@ -97,6 +98,7 @@ ul#little-circles li {
 	height: 2.5rem;
 	border-radius: 100%;
 	cursor: pointer;
+	z-index: 100;
 	background-color: #000000;
 	position: relative;
 }
